# ChangeLog for sys-cluster/csync2
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/csync2/ChangeLog,v 1.12 2006/06/03 18:52:58 xmerlin Exp $

  03 Jun 2006; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.16.ebuild,
  csync2-1.22.ebuild, csync2-1.26.ebuild, csync2-1.29.ebuild,
  csync2-1.30.ebuild, csync2-1.32.ebuild:
  added dir /var/lib/csync2/

*csync2-1.32 (20 May 2006)

  20 May 2006; Christian Zoffoli <xmerlin@gentoo.org> +csync2-1.32.ebuild:
  Version bump.

  20 May 2006; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.30.ebuild:
  Stable on x86.

*csync2-1.30 (13 Mar 2006)

  13 Mar 2006; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.29.ebuild,
  +csync2-1.30.ebuild:
  Version bump.

  13 Mar 2006; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.29.ebuild:
  Stable x86.

*csync2-1.29 (09 Jan 2006)

  09 Jan 2006; Christian Zoffoli <xmerlin@gentoo.org> +csync2-1.29.ebuild:
  Version bump.

  09 Jan 2006; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.26.ebuild:
  Stable on x86.

*csync2-1.26 (17 Nov 2005)

  17 Nov 2005; Christian Zoffoli <xmerlin@gentoo.org> +csync2-1.26.ebuild:
  Version bump.

  17 Nov 2005; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.22.ebuild:
  Stable on x86.

*csync2-1.22 (24 Oct 2005)

  24 Oct 2005; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.16.ebuild,
  csync2-1.22.ebuild:
  fixed bug #109482.

  08 Oct 2005; Christian Zoffoli <xmerlin@gentoo.org> :
  New version.

  28 Apr 2005; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.16.ebuild:
  added the csync2 port to the /etc/services file

  27 Apr 2005; Christian Zoffoli <xmerlin@gentoo.org> csync2-1.16.ebuild:
  dep tuning.

*csync2-1.16 (27 Apr 2005)

  27 Apr 2005; Christian Zoffoli <xmerlin@gentoo.org> +metadata.xml,
  +files/csync2.xinetd, +csync2-1.16.ebuild:
  csync2 added to portage
