@@ -1,1 +1,0 @@
-MD5 8f55438f256f49ddb5f135e66e7f51e4 csync2-1.26.tar.gz 110843
