@@ -1,1 +1,0 @@
-MD5 7520e8e3f55bd85cdf462bbb3a6d1f5f csync2-1.29.tar.gz 113511
