@@ -1,1 +1,0 @@
-MD5 89241cc8320df3218fcd8c22f6484f3d csync2-1.30.tar.gz 114542
